llvm/test/tools/llubi/invoke_poison.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

define void @main() {
entry:
  invoke void poison() to label %exit unwind label %cleanup

cleanup:
  landingpad {} cleanup
  ret void

exit:
  ret void
}
; CHECK: Entering function: main
; CHECK-NEXT: Stacktrace:
; CHECK-NEXT: #0   invoke void poison()
; CHECK-NEXT:           to label %exit unwind label %cleanup at @main
; CHECK-NEXT: Immediate UB detected: Indirect call through poison function pointer.
; CHECK-NEXT: error: Execution of function 'main' failed.
